:bug: margin + tagline

--- a/html/biere-1.html
+++ b/html/biere-1.html
@@ -1,115 +1,114 @@
 <html>
-
-<head>
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="../style/biere-1.css" rel="stylesheet">
-    <!-- Compiled and minified JavaScript -->   
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</head>
-
-<body>
-    <nav>
-        <div class="nav-wrapper">
+   <head>
+      <!-- Compiled and minified CSS -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="../style/biere-1.css" rel="stylesheet">
+      <!-- Compiled and minified JavaScript -->   
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+   </head>
+   <body>
+      <nav>
+         <div class="nav-wrapper">
             <ul id="nav-mobile" class="left hide-on-med-and-down">
-                <li>
-                    <a href="../index.html">
-                        <i class="material-icons">chevron_left</i>
-                    </a>
-                </li>
+               <li>
+                  <a href="../index.html">
+                  <i class="material-icons">chevron_left</i>
+                  </a>
+               </li>
             </ul>
             <a class="brand-logo center">Buzz</a>
-        </div>
-    </nav>
-    <div class="container">
-        <div class="spacer"></div>
-        <div class="row">
-            <div class="col s6">
-                <div class="row">
-                    <div class="col s6">
-                        <img src="https://images.punkapi.com/v2/keg.png" id="beerPhoto">
-                    </div>
-                    <div class="col s6">
-                        <p><span class="dataName">First brewed: </span>09/2007</p>
-                        <p><span class="dataName">PH: </span>4.4</p>
-                        <p><span class="dataName">Attenuation level: </span>75</p>
-                        <p><span class="dataName">Boil volume: </span>25 litres</p>
-                        <p><span class="dataName">Food pairing: </span></p>
-                        <ul class="collection" id="foodPairing">
-                            <li class="collection-item">Spicy chicken tikka masala</li>
-                            <li class="collection-item">Grilled chicken quesadilla</li>
-                            <li class="collection-item">Caramel toffee cake</li>
-                        </ul>
-                        <p><span class="dataName">Déjà bu?: </span></p>
-                        <p><span class="dataName">Date de dégustation: </span>14/0/2020</p>
-                    </div>
-                </div>
+         </div>
+      </nav>
+      <div class="customContainer">
+         <div class="spacer"></div>
+         <div class="row">
+            <div class="col s5">
+               <div class="row">
+                  <div class="col s6">
+                     <img src="https://images.punkapi.com/v2/keg.png" id="beerPhoto">
+                     <p class="dataName">A Real Bitter Experience.</p>
+                  </div>
+                  <div class="col s6">
+                     <p><span class="dataName">First brewed: </span>09/2007</p>
+                     <p><span class="dataName">PH: </span>4.4</p>
+                     <p><span class="dataName">Attenuation level: </span>75</p>
+                     <p><span class="dataName">Boil volume: </span>25 litres</p>
+                     <p><span class="dataName">Food pairing: </span></p>
+                     <ul class="collection" id="foodPairing">
+                        <li class="collection-item">Spicy chicken tikka masala</li>
+                        <li class="collection-item">Grilled chicken quesadilla</li>
+                        <li class="collection-item">Caramel toffee cake</li>
+                     </ul>
+                     <p><span class="dataName">Déjà bu?: </span></p>
+                     <p><span class="dataName">Date de dégustation: </span>14/0/2020</p>
+                  </div>
+               </div>
             </div>
-            <div class="col s6">
-                <table class="responsive-table">
-                    <tbody>
-                      <tr>
+            <div class="col s2"></div>
+            <div class="col s5">
+               <table class="responsive-table">
+                  <tbody>
+                     <tr>
                         <td class="dataName">Malt</td>
-                      </tr>
-                      <tr>
+                     </tr>
+                     <tr>
                         <td></td>
                         <td>Maris Otter Extra Pale</td>
                         <td>3.3 kilograms</td>
-                      </tr>
-                      <tr>
+                     </tr>
+                     <tr>
                         <td></td>
                         <td>Caramalt</td>
                         <td>0.2 kilograms</td>
-                      </tr>
-                      <tr>
+                     </tr>
+                     <tr>
                         <td></td>
                         <td>Munich</td>
                         <td>0.4 kilograms</td>
-                      </tr>
-                      <tr>
+                     </tr>
+                     <tr>
                         <td class="dataName">Hops</td>
-                        <tr>
-                            <td></td>
-                            <td>Fuggles</td>
-                            <td>25 grams</td>
-                          </tr>
-                          <tr>
-                            <td></td>
-                            <td>First Gold</td>
-                            <td>25 grams</td>
-                          </tr>
-                      </tr>
-                      <tr>
-                          <td class="dataName">Yeast</td>
-                          <tr>
-                              <td>
-                              </td>
-                              <td>Wyeast 1056</td>
-                              <td>American Ale</td>
-                          </tr>
-                      </tr>
-                    </tbody>
-                  </table>
+                     <tr>
+                        <td></td>
+                        <td>Fuggles</td>
+                        <td>25 grams</td>
+                     </tr>
+                     <tr>
+                        <td></td>
+                        <td>First Gold</td>
+                        <td>25 grams</td>
+                     </tr>
+                     </tr>
+                     <tr>
+                        <td class="dataName">Yeast</td>
+                     <tr>
+                        <td>
+                        </td>
+                        <td>Wyeast 1056</td>
+                        <td>American Ale</td>
+                     </tr>
+                     </tr>
+                  </tbody>
+               </table>
             </div>
-        </div>
-        <div class="row">
+         </div>
+         <div class="row">
             <div class="col s6">
-                rating
+               rating
             </div>
             <div class="col s6">
-                textinput
+               textinput
             </div>
-        </div>
-        <div class="col s12">
+         </div>
+         <div class="col s12">
             precedent/suivant
-        </div>
-    </div>
-    <footer class="page-footer">
-        <div class="container">
+         </div>
+      </div>
+      <footer class="page-footer">
+         <div class="container">
             Audo Thomas
-        </div>
-    </footer>
-</body>
-
+         </div>
+      </footer>
+   </body>
 </html>
