Update table content

--- a/html/biere-23.html
+++ b/html/biere-23.html
@@ -29,20 +29,61 @@
             
                     <tbody>
                       <tr>
-                        <td>Alvin</td>
-                        <td>Eclair</td>
-                        <td>$0.87</td>
+                        <td></td>
+                        <td>Extra Pale</td>
+                        <td>5.8</td>
                       </tr>
                       <tr>
-                        <td>Alan</td>
-                        <td>Jellybean</td>
-                        <td>$3.76</td>
+                        <td>Hops</td>
+                        <td></td>
+                        <td></td>
                       </tr>
                       <tr>
-                        <td>Jonathan</td>
-                        <td>Lollipop</td>
-                        <td>$7.00</td>
+                        <td></td>
+                        <td>Ahtanum</td>
+                        <td>17.5</td>
                       </tr>
+                      <tr>
+                        <td></td>
+                        <td>Chinook</td>
+                        <td>15</td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                        <td>Crystal</td>
+                        <td>17.5</td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                        <td>Chinook</td>
+                        <td>17.5</td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                        <td>Crystal</td>
+                        <td>17.5</td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                        <td>Chinook</td>
+                        <td>27.5</td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                        <td>Motueka</td>
+                        <td>17.5</td>
+                      </tr>
+                      <tr>
+                        <td>Yeast</td>
+                        <td></td>
+                        <td></td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                        <td>Wyeast 1056 - American Ale™</td>
+                        <td></td>
+                      </tr>
+                      
                     </tbody>
                   </table>
             </div>
