feat(biere-5): basic beer card

--- a/html/biere-5.html
+++ b/html/biere-5.html
@@ -26,7 +26,68 @@
     </div>
 </nav>
 
-<main>
+<main class="container">
+
+    <div class="row">
+        <div class="col s5">
+
+            <div class="card-panel">
+                <div class="row">
+                    <div class="col s6">
+                        <img src="https://images.punkapi.com/v2/5.png" alt="Image de la bière 5" class="responsive-img">
+                    </div>
+                    <div class="col s6">
+                        <div class="first-brewed">02/2011</div>
+                        <div class="ph">4.4</div>
+                        <div class="attenuation-level">67</div>
+                        <div class="boil-volume">25 litres</div>
+                        <div class="food-pairing">
+                            Food pairing:
+                            <ul>
+                                <li>Vietnamese squid salad</li>
+                                <li>Chargrilled corn on the cob with paprika butter</li>
+                                <li>Strawberry and rhubarb pie</li>
+                            </ul>
+                        </div>
+                        <div class="already-drinked">
+                            <label>
+                                <input type="checkbox" checked="checked" />
+                                <span>Already Drinked</span>
+                            </label>
+                        </div>
+                        <div class="degustation-date">
+                            01/01/1970
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12">
+                        <div class="tagline">Bloggers' Imperial Pilsner.</div>
+                        <div class="rate">
+                            <i class="material-icons">star</i>
+                            <i class="material-icons">star</i>
+                            <i class="material-icons">star</i>
+                            <i class="material-icons">star</i>
+                            <i class="material-icons">star_border</i>
+                        </div>
+                        <div class="description">An Imperial Pilsner in collaboration with beer writers. Tradition.
+                            Homage. Revolution. We wanted to showcase the awesome backbone of the Czech brewing
+                            tradition, the noble Saaz hop, and also tip our hats to the modern beers that rock our
+                            world, and the people who make them.</div>
+                        <div class="brewer-tips">Make sure you have a big enough yeast starter to ferment through the OG
+                            and lager successfully.</div>
+                        <div class="contributed-by">Sam Mason &lt;samjbmason&gt;</div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="col s7"></div>
+    </div>
+
+    <div class="row">
+
+    </div>
 
     <div class="fixed-action-btn">
         <a class="btn-floating btn-large red">
