--- a/html/biere-17.html
+++ b/html/biere-17.html
@@ -11,27 +11,77 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <link rel="stylesheet" href="./style/index.css" />
-    <link rel="stylesheet" href="./style/biere-17.css" />
+    <link rel="stylesheet" href="../style/index.css" />
+    <link rel="stylesheet" href="../style/biere-17.css" />
 </head>
 <body>
 <nav>
-    <div class="nav-wrapper">
+    <div class="nav-wrapper" style="background-color: black;">
         <a href="#" class="brand-logo center">AB:06</a>
-        <ul id="nav-mobile" class="back-icon left hide-on-med-and-down">
-            <i class="large material-icons">chevron_left</i>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+            <i class="test large material-icons">chevron_left</i>
         </ul>
     </div>
 </nav>
-<div class="container">
+
+<main class="container">
     <!-- Page Content goes here -->
-    <div class="row">
-        <div class="col s5">1
+    <div class="row" style="margin-top: 5rem;">
+        <div class="col s5">
+            <div class="row">
+                <div class="col 5">
+                    <img class="materialboxed" width="170" src="../media/biere-17.png" style="min-height: 450px;">
+                </div>
+                <div class="col 7">
+                    <p>First brewed : 04/2011</p>
+                    <p>PH : NA</p>
+                    <p>Attenuation level : 87</p>
+                    <p>Boil volume : 25 litres</p>
+
+                    <div>
+                        <p>Food pairing</p>
+                        <ul class="">
+                            <li class="collection-item" style="font-size: 0.8rem;">Coffee dusted venison loin</li>
+                            <li class="collection-item" style="font-size: 0.8rem;">Memphis-style beef short ribs</li>
+                            <li class="collection-item" style="font-size: 0.8rem;">Chocolate orange brownies</li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12">
+                    <h2 style="font-size:25px;">Imperial Black IPA.</h2>
+                    <div class="" style="padding-left:0.5rem;">
+                        <i class="small material-icons">star</i>
+                        <i class="small material-icons">star</i>
+                        <i class="small material-icons">star</i>
+                        <i class="small material-icons">star</i>
+                        <i class="small material-icons">star_border</i>
+
+                    </div>
+
+
+                </div>
+            </div>
 
         </div>
         <div class="col s7">2</div>
     </div>
-</div>
+</main>
+
+<footer class="page-footer" style="background-color: #000000;">
+    <div class="footer-copyright">
+        <div class="container">
+            © 2020
+            <a class="grey-text text-lighten-4 right" href="#!">Théophile Gilet</a>
+        </div>
+    </div>
+</footer>
 </body>
 
 </html>
+
+<style>
+
+</style>
