Component icon star

--- a/html/biere-7.html
+++ b/html/biere-7.html
@@ -24,6 +24,14 @@
                 <div class="col s6 center">
                     <img class="materialboxed" width="200" src="../media/biere-7.png">
                     Imperial Black Belgian Ale.
+<div class="row">
+  <i class="small material-icons">star</i>
+  <i class="small material-icons">star</i>
+  <i class="small material-icons">star</i>
+  <i class="small material-icons">star</i>
+  <i class="small material-icons">star_border</i>
+
+</div>
                 </div>
                 <div class="col s6">
                     <ul class="collection">
