--- a/html/biere-23.html
+++ b/html/biere-23.html
@@ -18,8 +18,8 @@
             </div>
         </nav>
         <div class="row">
-            <div class="col s1">1</div>
-            <div class="col s1">
+            <div class="col s5">1</div>
+            <div class="col s5">
                 <table class="responsive-table striped">
                     <thead>
                       <tr>
@@ -92,8 +92,10 @@
             </div>
         </div>
         <div class="row">
-            <a class="waves-effect waves-light btn">Précédent</a>
-            <a class="waves-effect waves-light btn">Suivant</a>
+            <div class="center">
+                <a class="waves-effect waves-light btn">Précédent</a>
+                <a class="waves-effect waves-light btn">Suivant</a>
+            <div>
         </div>
 
     <footer class="page-footer">
