feat(biere-5): add previous/next buttons

--- a/html/biere-5.html
+++ b/html/biere-5.html
@@ -85,8 +85,9 @@
         <div class="col s7"></div>
     </div>
 
-    <div class="row">
-
+    <div class="row center-align">
+        <a href="./biere-4.html" class="btn">Previous</a>
+        <a href="./biere-6.html" class="btn">Next</a>
     </div>
 
     <div class="fixed-action-btn">
