--- a/html/biere-26.html
+++ b/html/biere-26.html
@@ -31,7 +31,7 @@
     </nav>
     <div class="container">
       <div class="row">
-        <div class="col s5 beer-desc">
+        <div class="col m5">
           <div class="desc-row">
             <div class="img-container">
               <img src="../media/biere-26.png" class="responsive-img" />
@@ -75,8 +75,63 @@
             <h6>contributed_by</h6>
           </div>
         </div>
-        <div class="col s7 t2">S6</div>
+        <div class="col m7">
+          <table class="responsive-table striped">
+            <thead class="t-head">
+              <tr>
+                <th>malt</th>
+                <th></th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td></td>
+                <td>name</td>
+                <td>amount</td>
+              </tr>
+              <tr>
+                <td>hops</td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>name</td>
+                <td>amount</td>
+              </tr>
+              <tr>
+                <td>yeast</td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>name</td>
+                <td>amount</td>
+              </tr>
+            </tbody>
+          </table>
+          <form class="comments">
+            <div class="input-field">
+              <textarea id="textarea1" class="materialize-textarea"></textarea>
+              <label for="textarea1">Textarea</label>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="row center-align">
+        <a class="waves-effect waves-light btn">Précédent</a>
+        <a class="waves-effect waves-light btn">Suivant</a>
       </div>
     </div>
+    <div class="fixed-action-btn">
+      <a class="btn-floating btn-large red">
+        <i class="large material-icons">mode_edit</i>
+      </a>
+    </div>
+    <footer class="page-footer center-align">
+        Vo Lam Nhat Khuong - FILA2
+    </footer>
   </body>
 </html>
