:sparkles: add footer and table

--- a/html/biere-11.html
+++ b/html/biere-11.html
@@ -18,7 +18,40 @@
             </nav>
         </header>
         <main>
+            <div class="row" style="margin: 100px;">
+                <div class="col s1"><img src="https://images.punkapi.com/v2/keg.png" alt="Italian Trulli" width="200"></div>
+                <div class="col s2" style="margin-left: 300px;">
+                    <table>            
+                      <tbody>
+                        <tr>
+                            <td>Malt</th>
+                            <td>Nom</th>
+                            <td>Quantité</th>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Pale ALe</td>
+                          <td>2.18</td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Dark Crystal</td>
+                          <td>0.3</td>
+                        </tr>
+                        <tr>
+                          <td></td>
+                          <td>Smoked Weyermann</td>
+                          <td>1.8</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                </div>
+            </div>
         </main>
-        <footer></footer>
+        <footer class="page-footer">
+            <div class="container" style="padding-bottom: 50px;">
+                <h5 class="white-text center">Valentin FIL A2</h5>
+            </div>
+        </footer>
     </body>
 </html>
