:sparkles: quote + textarea

--- a/html/biere-1.html
+++ b/html/biere-1.html
@@ -28,6 +28,13 @@
                   <div class="col s6">
                      <img src="https://images.punkapi.com/v2/keg.png" id="beerPhoto">
                      <p class="dataName">A Real Bitter Experience.</p>
+                     <div class="row">
+                        <i class="material-icons">star</i>
+                        <i class="material-icons">star</i>
+                        <i class="material-icons">star</i>
+                        <i class="material-icons">star_border</i>
+                        <i class="material-icons">star_border</i>
+                     </div>
                   </div>
                   <div class="col s6">
                      <p><span class="dataName">First brewed: </span>09/2007</p>
@@ -94,11 +101,21 @@
             </div>
          </div>
          <div class="row">
-            <div class="col s6">
-               rating
+            <div class="col s5">
+                <blockquote>
+                    <p>A light, crisp and bitter IPA brewed with English and American hops. A small batch brewed only once.</p>
+                    <p>The earthy and floral aromas from the hops can be overpowering. Drop a little Cascade in at the end of the boil to lift the profile with a bit of citrus.                    </p>
+                    <i>Sam Mason <samjbmason></samjbmason></i>
+                </blockquote>
             </div>
-            <div class="col s6">
-               textinput
+            <div class="col s2"></div>
+            <div class="col s5">
+               <form>
+                   <label for="review">Votre review:</label>
+                   <textarea name="review">
+
+                   </textarea>
+               </form>
             </div>
          </div>
          <div class="col s12">
