--- a/html/biere-2.html
+++ b/html/biere-2.html
@@ -16,48 +16,50 @@
     <body>
         <img #beerImg src="../media/biere-2.png" alt="Photo de la bière Trashy Blonde, avec une étiquette violette et pleins de petits psssshhhh de graffitis partout sur la bouteille.">
 
-        <table>
+        <table class="striped">
+            <thead>
+                <tr>
+                    <td>Malt</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </thead>
             <tbody>
-              <tr>
-                <td>Malt</td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>Maris Otter Extra Pale</td>
-                <td>3.25kg</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>Caramalt</td>
-                <td>0.2kg</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>Munich</td>
-                <td>0.4kg</td>
-              </tr>
-              <tr>
-                <td>Hops</td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>Amarillo</td>
-                <td>40.1g</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>Simcoe</td>
-                <td>13.8g</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>Motueka</td>
-                <td>18.8g</td>
-              </tr>
+                <tr>
+                    <td></td>
+                    <td>Maris Otter Extra Pale</td>
+                    <td>3.25kg</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Caramalt</td>
+                    <td>0.2kg</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Munich</td>
+                    <td>0.4kg</td>
+                </tr>
+                <tr>
+                    <td>Hops</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Amarillo</td>
+                    <td>40.1g</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Simcoe</td>
+                    <td>13.8g</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Motueka</td>
+                    <td>18.8g</td>
+                </tr>
             </tbody>
         </table>
 
