:sparkles: add bottom buttons

--- a/html/biere-11.html
+++ b/html/biere-11.html
@@ -47,6 +47,10 @@
                     </table>
                 </div>
             </div>
+            <div class="center" style="padding-bottom: 10px;">
+                <a class="waves-effect waves-light btn-small">Précedent</a>
+                <a class="waves-effect waves-light btn-small">Suivant</a>
+            </div>
         </main>
         <footer class="page-footer">
             <div class="container" style="padding-bottom: 50px;">
