--- a/html/biere-6.html
+++ b/html/biere-6.html
@@ -15,6 +15,7 @@
         </ul>
       </div>
     </nav>
+    <a class="waves-effect waves-light btn beer-edit-button">Edit</a>
     <div class="container beer-container">
       <div class="row">
         <div class="col s4">
