--- a/html/biere-23.html
+++ b/html/biere-23.html
@@ -14,11 +14,15 @@
     <body>
         <nav>
             <div class="nav-wrapper">
-                <p class="center">Storm</p>
+                <h3 class="center">Storm</h3>
             </div>
         </nav>
         <div class="row">
-            <div class="col s5">1</div>
+            <div class="col s5">
+                <div class="row">
+                    <img src="https://images.punkapi.com/v2/23.png" class="beer-img">
+                </div>
+            </div>
             <div class="col s5">
                 <table class="responsive-table striped">
                     <thead>
@@ -99,7 +103,7 @@
         </div>
 
     <footer class="page-footer">
-            <div class="container center">
+            <div class="container center ">
                 Delphine FILA2
             </div>
     </footer>
